Added mane structure and comments

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My First Page</title>
 </head>
 <body>
-  
+  <!-- HEADER -->
+  <header></header>
+  <!-- /HEADER -->
+  <!-- NAVIGATION -->
+ <nav></nav>
+  <!-- /NAVIGATION -->
+<!-- MAIN SECTION -->
+  <main></main>
+  <!-- MAIN SECTION -->
+  <!-- FOOTER -->
+  <footer></footer>
+  <!-- FOOTER -->
 </body>
 </html>
