Added header and navigation to html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Page</title>
-</head>
-<body>
-  <!-- HEADER -->
-  <header></header>
-  <!-- /HEADER -->
-  <!-- NAVIGATION -->
- <nav></nav>
-  <!-- /NAVIGATION -->
-<!-- MAIN SECTION -->
-  <main></main>
-  <!-- MAIN SECTION -->
-  <!-- FOOTER -->
-  <footer></footer>
-  <!-- FOOTER -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My First Page</title>
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <div>
+        <h1>Main Header Here</h1>
+        <h2><small>And small sub header</small></h2>
+      </div>
+    </header>
+    <!-- /HEADER -->
+    <!-- NAVIGATION -->
+    <nav>
+      <div>
+        <ul>
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>About</li>
+          <li><a href="#"></a>Contacts</li>
+        </ul>
+        <!-- LOGIN FORM -->
+        <form action="#">
+          <input type="text" placeholder="Login" required />
+          <input type="password" placeholder="Password" required />
+          <input type="submit" value="Sing In" />
+        </form>
+        <!-- /LOGIN FORM -->
+      </div>
+    </nav>
+    <!-- /NAVIGATION -->
+    <!-- MAIN SECTION -->
+    <main></main>
+    <!-- MAIN SECTION -->
+    <!-- FOOTER -->
+    <footer></footer>
+    <!-- FOOTER -->
+  </body>
 </html>
