--- a/index.html
+++ b/index.html
@@ -34,7 +34,153 @@
     </nav>
     <!-- /NAVIGATION -->
     <!-- MAIN SECTION -->
-    <main></main>
+    <main>
+      <div>
+        <h2>Image Collection <small>Visualize Quality</small></h2>
+        <div>
+          <div>
+            <div>
+              <img
+                src="./images/profile.jpg"
+                alt="List Picture"
+                width="300"
+                height=""
+              />
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img
+                src="./images/profile.jpg"
+                alt="List Picture"
+                width="300"
+                height=""
+              />
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img
+                src="./images/profile.jpg"
+                alt="List Picture"
+                width="300"
+                height=""
+              />
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+        </div>
+         <h2>Video Collection <small>Visualize Quality</small></h2>
+        <div>
+          <div>
+            <div>
+              <video controls>
+                <source src="./video/movie.mp4" type="video/mp4">
+              </video>
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+               <video controls>
+                <source src="./video/movie.mp4" type="video/mp4">
+              </video>
+              />
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <video controls>
+                <source src="./video/movie.mp4" type="video/mp4">
+              </video>
+              />
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <!-- MAIN SECTION -->
     <!-- FOOTER -->
     <footer></footer>
