--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav>
       <div>
         <ul>
-          <li><a href="#"></a>Home</li>
-          <li><a href="#"></a>About</li>
-          <li><a href="#"></a>Contacts</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
         <!-- LOGIN FORM -->
         <form action="#">
@@ -183,7 +183,13 @@
     </main>
     <!-- MAIN SECTION -->
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <div>
+        <p>
+          Copyright © Example.com 2015
+        </p>
+      </div>
+    </footer>
     <!-- FOOTER -->
   </body>
 </html>
