Added Unicode symbol

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                <video controls>
                 <source src="./video/movie.mp4" type="video/mp4">
               </video>
-              />
+              
               <div>
                 <h3>List Element Item</h3>
                 <p>
@@ -161,7 +161,7 @@
               <video controls>
                 <source src="./video/movie.mp4" type="video/mp4">
               </video>
-              />
+              
               <div>
                 <h3>List Element Item</h3>
                 <p>
@@ -186,7 +186,7 @@
     <footer>
       <div>
         <p>
-          Copyright © Example.com 2015
+          Copyright &copy Example.com 2015
         </p>
       </div>
     </footer>
