--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>My First Page</title>
   </head>
   <body>
@@ -111,35 +113,13 @@
             </div>
           </div>
         </div>
-         <h2>Video Collection <small>Visualize Quality</small></h2>
+        <h2>Video Collection <small>Visualize Quality</small></h2>
         <div>
           <div>
             <div>
               <video controls>
-                <source src="./video/movie.mp4" type="video/mp4">
+                <source src="./video/movie.mp4" type="video/mp4" />
               </video>
-              <div>
-                <h3>List Element Item</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-                <button>Read more...</button>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div>
-               <video controls>
-                <source src="./video/movie.mp4" type="video/mp4">
-              </video>
-              
               <div>
                 <h3>List Element Item</h3>
                 <p>
@@ -159,9 +139,31 @@
           <div>
             <div>
               <video controls>
-                <source src="./video/movie.mp4" type="video/mp4">
+                <source src="./video/movie.mp4" type="video/mp4" />
               </video>
-              
+
+              <div>
+                <h3>List Element Item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                  irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                  cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <video controls>
+                <source src="./video/movie.mp4" type="video/mp4" />
+              </video>
+
               <div>
                 <h3>List Element Item</h3>
                 <p>
@@ -185,9 +187,7 @@
     <!-- FOOTER -->
     <footer>
       <div>
-        <p>
-          Copyright &copy Example.com 2015
-        </p>
+        <p>Copyright &copy Example.com 2015</p>
       </div>
     </footer>
     <!-- FOOTER -->
