--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
-      <div>
+    <header class="header">
+      <div class="container">
         <h1>Main Header Here</h1>
         <h2><small>And small sub header</small></h2>
       </div>
     </header>
     <!-- /HEADER -->
     <!-- NAVIGATION -->
-    <nav>
-      <div>
+    <nav class="page-navigation">
+      <div class="container">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
         <!-- LOGIN FORM -->
-        <form action="#">
+        <form action="#" class="login">
           <input type="text" placeholder="Login" required />
           <input type="password" placeholder="Password" required />
-          <input type="submit" value="Sing In" />
+          <input type="submit" value="Sign In" />
         </form>
         <!-- /LOGIN FORM -->
       </div>
