--- a/index.html
+++ b/index.html
@@ -37,18 +37,15 @@
     <!-- /NAVIGATION -->
     <!-- MAIN SECTION -->
     <main>
-      <div>
-        <h2>Image Collection <small>Visualize Quality</small></h2>
-        <div>
-          <div>
-            <div>
-              <img
-                src="./images/profile.jpg"
-                alt="List Picture"
-                width="300"
-                height=""
-              />
-              <div>
+      <div class="container">
+        <h2 class="collection-title">
+          Image Collection <small>Visualize Quality</small>
+        </h2>
+        <div class="collections">
+          <div class="collection-item-outer">
+            <div class="collection-item">
+              <img src="./images/profile.jpg" alt="List Picture" />
+              <div class="collection-text">
                 <h3>List Element Item</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -64,15 +61,10 @@
               </div>
             </div>
           </div>
-          <div>
-            <div>
-              <img
-                src="./images/profile.jpg"
-                alt="List Picture"
-                width="300"
-                height=""
-              />
-              <div>
+          <div class="collection-item-outer">
+            <div class="collection-item">
+              <img src="./images/profile.jpg" alt="List Picture" />
+              <div class="collection-text">
                 <h3>List Element Item</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -88,15 +80,10 @@
               </div>
             </div>
           </div>
-          <div>
-            <div>
-              <img
-                src="./images/profile.jpg"
-                alt="List Picture"
-                width="300"
-                height=""
-              />
-              <div>
+          <div class="collection-item-outer">
+            <div class="collection-item">
+              <img src="./images/profile.jpg" alt="List Picture" />
+              <div class="collection-text">
                 <h3>List Element Item</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -113,14 +100,16 @@
             </div>
           </div>
         </div>
-        <h2>Video Collection <small>Visualize Quality</small></h2>
-        <div>
-          <div>
-            <div>
+        <h2 class="collection-title">
+          Video Collection <small>Visualize Quality</small>
+        </h2>
+        <div class="collections">
+          <div class="collection-item-outer">
+            <div class="collection-item">
               <video controls>
                 <source src="./video/movie.mp4" type="video/mp4" />
               </video>
-              <div>
+              <div class="collection-text">
                 <h3>List Element Item</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -136,13 +125,12 @@
               </div>
             </div>
           </div>
-          <div>
-            <div>
+          <div class="collection-item-outer">
+            <div class="collection-item">
               <video controls>
                 <source src="./video/movie.mp4" type="video/mp4" />
               </video>
-
-              <div>
+              <div class="collection-text">
                 <h3>List Element Item</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -158,13 +146,12 @@
               </div>
             </div>
           </div>
-          <div>
-            <div>
+          <div class="collection-item-outer">
+            <div class="collection-item">
               <video controls>
                 <source src="./video/movie.mp4" type="video/mp4" />
               </video>
-
-              <div>
+              <div class="collection-text">
                 <h3>List Element Item</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
