Added styles to footer

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     </main>
     <!-- MAIN SECTION -->
     <!-- FOOTER -->
-    <footer>
-      <div>
+    <footer class="footer">
+      <div class="container">
         <p>Copyright &copy Example.com 2015</p>
       </div>
     </footer>
